tugas p03 (lilis fatimah)-41215402

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8"/>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<link rel="stylesheet" type="text/css" href="index.css">
+	<link rel="stylesheet" href="index.css">
 	<title>perkenalan diri</title>
 </head>
 <body>
@@ -19,6 +19,24 @@
 		<a href="https://www.instagram.com/lilisfaatimaah/">Lilis Fatimah</a></p>
 		<p>41215402
 		</p>
+
+	<div class="friends10">
+		<p>
+			<a onclick="alert('Apakah kamu ingin masuk ke halaman table?')" href="./p03/table.html">TOP 10 Best Friends</a>
+		</p>
+	</div>
+
+	<div class="friends5">
+		<p>
+			<a onclick="alert('Apakah kamu ingin masuk ke halaman table?')" href="./p03css/table2.html">TOP 5 Best Friends</a>
+		</p>
+	</div>
+
+	<div class="friends10j">
+		<p>
+			<a onclick="alert('Apakah kamu ingin masuk ke halaman table?')" href="./p03jquery/tablejquery.html">TOP 10 Best Friends Jquery</a>
+		</p>
+	</div>
 
 </div>
 </body>
