--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
 	<div class="photo">
 		<p>
 		<img src="myfoto.jpeg" style="display: block; margin: auto;" />
+		<h1>
+			<a href="https://instagram.com/lilisfaatimaah"> Lilis Fatimah<br></a>
+			41215402 
+		</h1>
 		</p>
 	</div>
-
-	<div class="text">
-		<p>
-		<a href="https://www.instagram.com/lilisfaatimaah/">Lilis Fatimah</a></p>
-		<p>41215402
-		</p>
 
 	<div class="friends10">
 		<p>
