--- a/p03jquery/tablejquery.html
+++ b/p03jquery/tablejquery.html
@@ -88,7 +88,7 @@
 	</tr>
 </tbody>
 </table>
-<script src="../Jquery/jquery.js"></script>
+<script src="../jquery/jquery.js"></script>
 <script src="script.js"></script>
 
 <div class="Kembali-tablejquery">
