Tugas p03 Lilis Fatimah-41215402

--- a/p03jquery/tablejquery.html
+++ b/p03jquery/tablejquery.html
@@ -21,7 +21,7 @@
 		<td>Feni Mahmudah</td>
 		<td>Sarajaya</td>
 		<td class="ubah">Edit</td>
-		<td class="ubah">Ubah</td>
+		<td class="hapus">Hapus</td>
 	</tr>
 	<tr>
 		<td>2</td>
@@ -35,56 +35,56 @@
 		<td>Mirna</td>
 		<td>Sigong</td>
 		<td class="ubah">Edit</td>
-		<td class="ubah">Ubah</td>
+		<td class="hapus">Hapus</td>
 	</tr>
 	<tr>
 		<td>4</td>
 		<td>Viona Rahmawati</td>
 		<td>Kaligawe</td>
 		<td class="ubah">Edit</td>
-		<td class="ubah">Ubah</td>
+		<td class="hapus">Hapus</td>
 	</tr>
 	<tr>
 		<td>5</td>
 		<td>Laylatunna'imah</td>
 		<td>Losari</td>
 		<td class="ubah">Edit</td>
-		<td class="ubah">Ubah</td>
+		<td class="hapus">Hapus</td>
 	</tr>
 	<tr>
 		<td>6</td>
 		<td>Devita Fitri Angraeni</td>
 		<td>Arjawinangun</td>
 		<td class="ubah">Edit</td>
-		<td class="ubah">Ubah</td>
+		<td class="hapus">Hapus</td>
 	</tr>
 	<tr>
 		<td>7</td>
 		<td>Muhamad Abdul Fatah</td>
 		<td>Sukadana</td>
 		<td class="ubah">Edit</td>
-		<td class="ubah">Ubah</td>
+		<td class="hapus">Hapus</td>
 	</tr>
 	<tr>
 		<td>8</td>
 		<td>Muhammad Hilman</td>
 		<td>Waled Desa</td>
 		<td class="ubah">Edit</td>
-		<td class="ubah">Ubah</td>
+		<td class="hapus">Hapus</td>
 	</tr>
 	<tr>
 		<td>9</td>
 		<td>Mohchammad Fatha Mudzhaffar</td>
 		<td>Babakan</td>
 		<td class="ubah">Edit</td>
-		<td class="ubah">Ubah</td>
+		<td class="hapus">Hapus</td>
 	</tr>
 	<tr>
 		<td>10</td>
 		<td>Ica Unari</td>
 		<td>Sumber</td>
 		<td class="ubah">Edit</td>
-		<td class="ubah">Ubah</td>
+		<td class="hapus">Hapus</td>
 	</tr>
 </tbody>
 </table>
