--- a/p03css/table2.html
+++ b/p03css/table2.html
@@ -7,7 +7,7 @@
 	<title>TOP 10 Best Fiends</title>
 </head>
 <body>
-<h1 class="judul"> TOP 5 Bestfriends </h1>
+<h1 class="judul"> TOP 5 Best friends </h1>
 <table class="tabel">
 	<tbody>
 	<tr class="tabel-utama">
@@ -21,35 +21,35 @@
 		<td>Feni Mahmudah</td>
 		<td>Sarajaya</td>
 		<td class="ubah">Edit</td>
-		<td class="ubah">Ubah</td>
+		<td class="hapus">Hapus</td>
 	</tr>
 	<tr>
 		<td>2</td>
 		<td>Muhamad Muzani</td>
 		<td>Talun</td>
 		<td class="ubah">Edit</td>
-		<td class="ubah">Ubah</td>
+		<td class="hapus">Hapus</td>
 	</tr>
 	<tr>
 		<td>3</td>
 		<td>Mirna</td>
 		<td>Sigong</td>
 		<td class="ubah">Edit</td>
-		<td class="ubah">Ubah</td>
+		<td class="hapus">Hapus</td>
 	</tr>
 	<tr>
 		<td>4</td>
 		<td>Viona Rahmawati</td>
 		<td>Kaligawe</td>
 		<td class="ubah">Edit</td>
-		<td class="ubah">Ubah</td>
+		<td class="hapus">Hapus</td>
 	</tr>
 	<tr>
 		<td>5</td>
 		<td>Devita Fitri Angraeni</td>
 		<td>Arjawinangun</td>
 		<td class="ubah">Edit</td>
-		<td class="ubah">Ubah</td>
+		<td class="hapus">Hapus</td>
 	</tr>
 	</tbody>
 </table>
